--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   
-  <title>Frontend Mentor | QR code component</title>
+  <title>GautamArora- FrontendMentor|QRCode</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
   <style>
 
     body{
-      background-color: hsl(212, 45%, 89%);
+      background-color: hsl(215, 7%, 65%);
       font-family: "Outfit";
     
     }
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .lowerpart { font-size: 11px; text-align: center; }
+    .lowerpart a { color: skyblue; }
 
     .QRcontainer
     {
@@ -73,7 +73,7 @@
 
  
   
-  <div class="attribution">
+  <div class="lowerpart">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">GTM</a>.
   </div>
